fix: fix issue with text-wrap

--- a/improved/styles.css
+++ b/improved/styles.css
@@ -294,7 +294,6 @@ textarea {
         list-style: none;
         color: black;
         margin-bottom: 0;
-        white-space: nowrap;
     }
 
     .header-content {
