--- a/styles.css
+++ b/styles.css
@@ -315,7 +315,6 @@ textarea {
         list-style: none;
         color: black;
         margin-bottom: 0;
-        white-space: nowrap;
     }
 
     .header-content {
